# bf-in-rosetta

./: .gitignore  LICENSE  README.md  exampleCode.bf  helloWorld.bf
B/: README.md  a.out  bfInterpt.b
R/: installRequriements.r  main.r
asm-x86_64-linux/: Makefile  main.asm  test.c
bf-compiler-rust/: Cargo.toml
bf-haskell/: .gitignore  README.md  bf-haskell.cabal  package.yaml
bfc-ocaml/: .gitignore  Makefile  bfc-ocaml.opam  dune-project  runit  test_file.asm
c/: CMakeLists.txt  example.bf  main.c
c++/: CMakeLists.txt  main.cpp  test.bf  test.csv
csharp/: csharp.sln
go/: brrr.bf  main.go
java/: brrr.bf  test.csv
js/: package.json  (+1 more)
ocaml/: bf_in_ocaml.opam  dune-project
ocaml/lib/: bf_in_ocaml.ml  bf_in_ocaml.mli  dune
rust/: Cargo.toml  bench.bf  bench.py  benchComparson.csv  benchOuput.csv  bf.txt  bf2run  fiv.bf  helloWorld.bf  rust-bf_1.0.0_amd64.snap  rust-bf_1.1.0_amd64.snap  rust-bf_2.0.0_amd64.snap  rust-bf_2.0.0_amd64.snap.xdelta3  rust-bf_2.1.0_amd64.snap  rust-bf_2.1.1_amd64.snap  rust-bf_3.0.0_amd64.snap  rust-bf_3.0.1_amd64.snap  snapcraft.yaml  test-script.sh  test.txt  timing.txt
rust/Benchmarks/: bench.py  benchAll.py  benchComparson.csv  benchOuput.csv  benchOuput_Origonal.csv  benchOuput_WithOverhead.csv  benchOuput_loopCache.csv
rust/snaps/: rust-bf_1.0.0_amd64.snap.xdelta3  rust-bf_2.1.2_amd64.snap  rust-bf_3.0.1_amd64.snap  rust-bf_3.0.2_amd64.snap  rust-bf_3.1.0_amd64.snap
rust/src/: brainfuck_lexer.rs  config.rs  loop_cache.rs  main.rs  results.temp  util.rs
rust/tests/: test2.bf  test3.bf  testingFibDecimal.txt
(+68 files in other folders)
