[package]
name = "rust-bf"
version = "2.1.0"
authors = ["Fallstop <jasper@ngita.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = 3
overflow-checks = false
lto = true

[dependencies]
regex = "1.3.7"