[package]
name = "rust-bf"
version = "4.0.0"
authors = ["Fallstop <contact@jmw.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
debug = true
opt-level = 3
overflow-checks = false
codegen-units = 1

[dependencies]